[package]
name = "umbrella"
description = "Cross network client to write data into blockchain."
version = "0.1.0"
edition = "2018"
license = "MIT"

[dependencies]
structopt = "0.2.18"
stderrlog="0.4.1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
hex = "0.3"
rand = "0.6.0" # check rand_core
secp256k1 = "0.15.5"
rust-base58 = "0.0.4"
ring = "0.14"
byteorder = "1.2"
digest = "0.7"
dns-lookup = "0.9"
lazy_static = "1.0"
ripemd160 = "0.7"
snowflake = "1.3"

rlp = "0.4.0"
parity-snappy = "0.1"
tiny-keccak = "1.4"
parity-crypto = "0.4.0"
keccak-hash = "0.3.0"
ethereum-types = "0.6.0"
aes = "0.3.2"
aes-ctr = "0.3.0"
block-modes = "0.3.3"

ethkey = {path = "../parity-ethereum/accounts/ethkey"}
common-types = {path = "../parity-ethereum/ethcore/types"}
ethstore = {path = "../parity-ethereum/accounts/ethstore"}

[patch.crates-io]

[profile.release]
opt-level = "z" # s
lto = true      # shrink binary
debug = false

[features]
default = ["secp256k1/recovery"]
