[package]
name = "umbrella"
description = "Cross network client to write data into blockchain."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
structopt = "0.2.18"
stderrlog="0.4.1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_warn"] }
hex = "0.3"
rand = "0.8.5"
rand_core = "0.6.4"
secp256k1 = { version = "0.27.0", features = ["rand-std", "bitcoin-hashes-std", "global-context"] }
rust-base58 = "0.0.4"
ring = "0.16.20"
byteorder = "1.2"
digest = "0.7"
ripemd160 = "0.7"

snap = "1.1.0"
tiny-keccak = "1.4"
rust-scrypt = "1.3.0"
serde_json = "1.0"
aes = "0.3.2"
aes-ctr = "0.3.0"
block-modes = "0.3.3"

[patch.crates-io]

[profile.release]
opt-level = "z" # s
lto = true      # shrink binary
debug = false

[features]
default = ["secp256k1/recovery"]
