[package]
name = "umbrella"
description = "Cross network client to write data into blockchain."
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
aes = "0.3.2"
aes-ctr = "0.3.0"
block-modes = "0.3.3"
bs58 = "0.4.0"
byteorder = "1.4.3"
digest = "0.10.6"
hex = "0.4.3"
log = { version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
rand = "0.8.5"
rand_core = "0.6.4"
ring = "0.16.20"
ripemd = "0.1.3"
rust-base58 = "0.0.4"
rust-scrypt = "1.3.0"
secp256k1 = { version = "0.27.0", features = ["recovery", "rand-std", "bitcoin-hashes-std", "global-context"] }
serde_json = "1.0.96"
snap = "1.1.0"
stderrlog="0.5.4"
structopt = "0.2.18"
tiny-keccak = "1.5.0"

[profile.release]
opt-level = "z" # s
lto = true      # shrink binary
debug = false
