[package]
description = "Ethereum"
license = "MIT"
name = "eth"
version = "1.0.0"

[dependencies]
ethkey = { path = "../../parity-ethereum/accounts/ethkey" }
common-types = { path = "../../parity-ethereum/ethcore/types" }
ethstore = { path = "../../parity-ethereum/accounts/ethstore" }
ethereum-types = "0.6.0"
keccak-hash = "0.3.0"
parity-crypto = "0.4.0"
tiny-keccak = "1.4"
secp256k1 = "0.15.3"
rand = "0.6"
rlp = "0.4.0"
parity-snappy = "0.1"
